--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
         <link rel="icon" href="{{ asset('img/core-img/favicon.ico') }}">
 
         {% block stylesheets %}
+            <!-- FONTAWESOME Stylesheet -->
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.css" integrity="sha256-YC896To53D/eet6K3jAwOq67iCIK24u2Hg6CQ+026I8=" crossorigin="anonymous" />
             <!-- MAPBOX Stylesheet -->
             <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
             <!-- Bootstrap Stylesheet -->
