--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -11,7 +11,7 @@
                             <li class="nav-item active">
                                 <a class="nav-link" href="{{ path('/') }}">Accueil</a>
                             </li>
-                            <li class="nav-item dropdown">
+                            <li class="nav-item ">
                                 <a class="nav-link " href="{{ path('default_explore') }}"  role="button" aria-haspopup="true" aria-expanded="false">Explore</a>
                                 <!--<div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         a class="dropdown-item" href=""></a>
@@ -37,14 +37,16 @@
                             <!-- LogIn LogOut Register-->
                             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                                 <span class="text-white"> Bonjour {{ app.user.pseudo}}  </span>
-                                <a class="nav-link dropdown"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown"></a>
+
+                                <a class="nav-link dropdown"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown">
+                                    <img id="avatarNav" class="rounded-circle" src="{{ asset('img/clients-img/avatar/' ~ app.user.avatar) }}" alt="{{app.user.pseudo}}">
+                                </a>
                                 <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
                                     {% if is_granted('ROLE_ADMIN') %}
                                         <li><a class="dropdown-item" href="{{path('easyadmin')}}">Administration</a></li>
                                     {% elseif is_granted('ROLE_USER') %}
                                     <li> <a class="dropdown-item" href="#">Mon Profil</a></li>
-                                    <li><a class="dropdown-item" href="#">Mon Panier</a></li>
                                 </ul>
                                 {% endif %}
 
