--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -9,21 +9,22 @@
                     <a href="{{ path('default_mlegales') }}">Mentions Légales</a>
                 </div>
                 <div class="col-4" >
-                    <h5 class="mx-auto">S'abonner à la newsletter</h5>
-                    <form class="form-inline mt-2" id="newsletter" method="POST" novalidate action="#" >
+{#                    <h5 class="mx-auto">S'abonner à la newsletter</h5>#}
+{#                    <form class="form-inline mt-2" id="newsletter" method="POST" novalidate action="#" >#}
 
-                        <div class="form-inline">
-                            <input type="email" name="email" class="form-control mr-2" id="email"  placeholder="Email">
-                        </div>
-                        <button type="submit" class="btn dorne-btn ">S'ABONNER</button>
-                    </form>
+{#                        <div class="form-inline">#}
+{#                            <input type="email" name="email" class="form-control mr-2" id="email"  placeholder="Email">#}
+{#                        </div>#}
+{#                        <button type="submit" class="btn dorne-btn ">S'ABONNER</button>#}
+{#                    </form>#}
                 </div>
                 <div class="col-3 footer-social-btns">
                     <a href="#"><i class="fa fa-facebook" aria-haspopup="true"></i></a>
+                    <a href="#"><i class="fa  fa-instagram" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-twitter" aria-haspopup="true"></i></a>
                     <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
-                    <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+
+
                 </div>
 
             </div>
