--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -50,7 +50,7 @@
                                         alias : site.alias,
                                         id : site.id,
                                         category : site.category.alias}
-                                    )}}" class="btn btn-block dorne-btn">J'y go</a>
+                                    )}}" class="btn btn-block dmi-btn">J'y go</a>
                                 </div>
                             </div>
 
