Corrextion dropdown menu et ajout avatar

--- a/public/css/responsive/responsive.css
+++ b/public/css/responsive/responsive.css
@@ -161,7 +161,7 @@
     }
     #dorneNav {
         padding: 15px;
-        background-color: #341a79;
+        background-color: #CC6600;
         box-shadow: 1px 9px 10px rgba(255, 255, 255, 0.15);
         border-radius: 0 0 3px 3px
     }
