--- a/public/css/style.css
+++ b/public/css/style.css
@@ -491,6 +491,28 @@ li {
 
 .dropdown-menu {
     border: none;
+
+
+}
+ul.dropdown-menu {
+    border: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: right !important;
+    min-width: 10rem;
+    padding: .5rem 0;
+    margin: .125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: .25rem;
 }
 
 .dropdown-item {
