--- a/public/css/style.css
+++ b/public/css/style.css
@@ -357,7 +357,10 @@ li {
     background-color: #FF6600;
     font-weight: 600;
 }
-
+#logoW{
+    max-width: 100% !important;
+    height: 100px !important;
+}
 /* Search Area CSS */
 
 .dorne-search-form {
@@ -494,26 +497,7 @@ li {
 
 
 }
-ul.dropdown-menu {
-    border: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: right !important;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
-    font-size: 1rem;
-    color: #212529;
-    text-align: left;
-    list-style: none;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
-    border-radius: .25rem;
-}
+
 
 .dropdown-item {
     font-weight: 600;
