--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -30,7 +30,7 @@
 
 
                             <div class="single-features-area mb-50">
-                                <img class="img-fluid" src="{{ asset('img/sites-img/' ~ site.image) }}"  alt="{{ site.name }}">
+                                <img class="img-dmi" src="{{ asset('img/sites-img/' ~ site.image) }}"  alt="{{ site.name }}">
                                 <!-- Category -->
                                 <div class="price-start">
                                     <p>{{ category.name}}</p>
