--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -49,9 +49,9 @@
                                         {% elseif is_granted('ROLE_USER') %}
                                         <li> <a class="dropdown-item" href="#">Mon Profil</a></li>
                                     </ul>
-                                </div>
+ggfff                                </div>
                                 {% endif %}
-
+f
                             {% else %} <!-- ANONYMOUS USER-->
                                 <!-- Signin btn -->
                                 <div class="dorne-signin-btn ml-auto">
